SOLR-15385 A few more rawtypes